# Telegram-Drive

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v1.6.0.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs  files.rs  folders.rs  mod.rs  updater.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/telegram/: client.rs  download.rs  mod.rs  upload.rs
src/components/ApiGuide/: ApiGuide.module.css  ApiGuide.tsx
src/components/ContextMenu/: ContextMenu.module.css  ContextMenu.tsx
src/components/FileCard/: FileCard.module.css  FileCard.tsx
src/components/FileExplorer/: FileExplorer.module.css  FileExplorer.tsx
src/components/FileIcon/: FileIcon.tsx
src/components/FolderTree/: FolderTree.module.css  FolderTree.tsx
src/components/RenameDialog/: RenameDialog.module.css  RenameDialog.tsx
src/components/SearchBar/: SearchBar.module.css  SearchBar.tsx
src/components/UploadProgress/: UploadProgress.tsx
src/locales/: index.tsx
src/pages/DrivePage/: DrivePage.module.css  DrivePage.tsx
src/pages/LoginPage/: LoginPage.module.css  LoginPage.tsx
src/services/: tauri-bridge.ts  updater.ts
src/styles/: global.css  tokens.css
src/types/: index.ts
